--- a/collect_app/src/main/res/layout/two_item.xml
+++ b/collect_app/src/main/res/layout/two_item.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:gravity="center_vertical"
+        android:text="Apaan"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -25,6 +26,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/text1"
+        android:text="Yoi"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:visibility="gone" />
 
@@ -36,6 +38,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/text3"
         android:gravity="center_vertical"
+        android:text="G tau"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
@@ -45,6 +48,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/text2"
+        android:text="dfsdg"
         android:gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:visibility="gone" />
