--- a/collect_app/src/main/res/values/colors.xml
+++ b/collect_app/src/main/res/values/colors.xml
@@ -25,4 +25,6 @@ the License.
     <color name="colorAccent">#005aff</color>
     <color name="transparent">#00ffffff</color>
 
+    <color name="primary_transparent">#80ffa500</color>
+
 </resources>
