--- a/collect_app/src/main/res/layout/tooltips_bottom_tip.xml
+++ b/collect_app/src/main/res/layout/tooltips_bottom_tip.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:layout_marginTop="10dp">
 
     <ImageView
         android:id="@+id/tooltip_nav_up"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_gravity="center"
         android:background="@drawable/tooltip_nav_up" />
 
@@ -18,9 +19,9 @@
         android:background="@drawable/tooltip_bg"
         android:gravity="center"
         android:padding="10dp"
-        android:text="Tooltip using PopupWindow :)"
+        android:text="Label stiker sudah diset"
         android:textColor="@android:color/white"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="bold" />
 
 </LinearLayout>
