--- a/collect_app/src/main/res/layout/panicar_view.xml
+++ b/collect_app/src/main/res/layout/panicar_view.xml
@@ -4,6 +4,85 @@
                     android:tag="arMainLayout"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent">
+    <!--<ImageView-->
+        <!--android:layout_width="30dp"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:src="@drawable/icon_caution"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:id="@+id/tombol_caution"-->
+        <!--android:background="@color/black_transparent"/>-->
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="94dp"-->
+        <!--android:id="@+id/rl_keterangan_form"-->
+        <!--android:visibility="visible">-->
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="80dp"-->
+            <!--android:background="@color/black_transparent"-->
+            <!--android:orientation="horizontal">-->
+            <!--<LinearLayout-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="0.75"-->
+                <!--android:orientation="vertical">-->
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Kuesioner"-->
+                    <!--android:layout_gravity="center_horizontal"-->
+                    <!--android:gravity="center_horizontal"-->
+                    <!--android:textColor="@color/white"/>-->
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Kuesioner Susenas"-->
+                    <!--android:layout_marginTop="20dp"-->
+                    <!--android:textSize="20sp"-->
+                    <!--android:id="@+id/nama_kuesioner"-->
+                    <!--android:layout_gravity="center_horizontal"-->
+                    <!--android:textColor="@color/white"-->
+                    <!--android:singleLine="true"/>-->
+            <!--</LinearLayout>-->
+            <!--<View-->
+                <!--android:layout_width="1dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:background="@color/white"/>-->
+            <!--<LinearLayout-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="0.75"-->
+                <!--android:orientation="vertical">-->
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Total Isian"-->
+                    <!--android:layout_gravity="center_horizontal"-->
+                    <!--android:gravity="center_horizontal"-->
+                    <!--android:textColor="@color/white"/>-->
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="87"-->
+                    <!--android:layout_marginTop="20dp"-->
+                    <!--android:textSize="23sp"-->
+                    <!--android:id="@+id/total_isian"-->
+                    <!--android:layout_gravity="center_horizontal"-->
+                    <!--android:textColor="@color/white"-->
+                    <!--android:singleLine="true"/>-->
+            <!--</LinearLayout>-->
+        <!--</LinearLayout>-->
+        <!--<ImageView-->
+            <!--android:layout_width="30dp"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:src="@drawable/icon_cancel"-->
+            <!--android:visibility="gone"-->
+            <!--android:id="@+id/tombol_cancel"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_alignParentBottom="true"/>-->
+    <!--</RelativeLayout>-->
+
 
     <org.odk.collect.android.augmentedreality.arkit.PARCameraView
         android:id="@+id/arCameraView"
@@ -35,20 +114,5 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/deviceOrientation"
-        android:tag="debugTextView"
-        android:layout_alignParentTop="true"
-        android:text="debugTextView"
-        android:padding="10dp"
-        android:background="#66ffffff"
-        android:inputType="text|textNoSuggestions|textMultiLine|textImeMultiLine"
-        android:textColor="@android:color/black"
-        android:layout_alignParentRight="true" />
-
 
 </RelativeLayout>
