--- a/collect_app/src/main/res/layout/activity_main_skripsi.xml
+++ b/collect_app/src/main/res/layout/activity_main_skripsi.xml
@@ -10,12 +10,12 @@
     android:paddingTop="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".augmentedreality.ui.MainMenuApp">
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/keterangan_profil"
             android:orientation="vertical"
             android:layout_alignParentTop="true"
@@ -41,6 +41,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="40dp"/>
+
             <!--<TextView-->
                 <!--android:layout_width="wrap_content"-->
                 <!--android:layout_height="wrap_content"-->
@@ -51,8 +52,19 @@
                 <!--android:id="@+id/list_form_main"-->
                 <!--android:layout_marginTop="10dp"-->
                 <!--android:layout_below="@id/nama_profil"></android.support.v7.widget.RecyclerView>-->
+            <org.odk.collect.android.augmentedreality.ui.ExpandGridView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/grid_view"
+                android:numColumns="auto_fit"
+                android:gravity="center"
+                android:nestedScrollingEnabled="true"
+                android:layout_margin="3dp"
+                android:horizontalSpacing="3dp"
+                android:verticalSpacing="3dp"></org.odk.collect.android.augmentedreality.ui.ExpandGridView>
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </ScrollView>
+
 
     <com.nightonke.boommenu.BoomMenuButton
         android:id="@+id/bmb"
