--- a/collect_app/src/main/res/layout/detail_foto_bs_modal.xml
+++ b/collect_app/src/main/res/layout/detail_foto_bs_modal.xml
@@ -20,10 +20,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
-                android:id="@+id/ket_bangunan_sensus"
+                android:text="Foto Bangunan"
+                android:textStyle="bold"
                 android:layout_gravity="center_horizontal"
-                android:textSize="16sp"/>
-
+                android:textSize="17sp"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
@@ -34,6 +34,16 @@
                 android:layout_height="300dp"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/gambar_bangunan_sensus"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="Lihat Detail"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:background="@drawable/ico_rounded"
+                android:layout_gravity="center_horizontal"/>
 
 
 
