--- a/collect_app/src/main/res/layout/set_ket_stiker_1.xml
+++ b/collect_app/src/main/res/layout/set_ket_stiker_1.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="150dp"
+    android:layout_gravity="center"
     android:background="@color/white_transparent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,24 +22,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="0.5"
-                    android:orientation="vertical"
                     android:layout_marginBottom="1dp"
                     android:background="@color/black_transparent"
                     android:id="@+id/ll_pertama">
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Nama Petugas"
-                        android:layout_marginTop="3dp"
-                        android:textSize="8dp"
-                        android:textColor="@color/white"
-                        android:layout_gravity="center"/>
-                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Septiawan Aji Pradana"
-                        android:singleLine="true"
-                        android:textStyle="bold"
+                        android:text="Blok Sensus"
                         android:id="@+id/tv_pertama"
                         android:textColor="@color/white"
                         android:gravity="center"/>
@@ -48,62 +38,39 @@
                     android:layout_height="0dp"
                     android:layout_weight="0.5"
                     android:layout_marginTop="1dp"
-                    android:orientation="vertical"
                     android:background="@color/black_transparent"
                     android:id="@+id/ll_kedua">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Kuesioner"
-                        android:layout_marginTop="3dp"
-                        android:textSize="8dp"
-                        android:textColor="@color/white"
-                        android:layout_gravity="center"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textColor="@color/white"
-                        android:text="Susenas 2017 Modul KOOR"
-                        android:textStyle="bold"
+                        android:text="Blok Sensus"
                         android:id="@+id/tv_kedua"
-                        android:singleLine="true"
                         android:gravity="center"/>
                 </LinearLayout>
             </LinearLayout>
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_weight="0.4"
-                android:layout_height="75dp"
-                android:orientation="vertical"
-                android:background="@color/black_transparent">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:text="Total Isian"
-                    android:textColor="@color/white"
-                    android:layout_gravity="center"
-                    android:textSize="15dp" />
-                <TextView
-                    android:layout_width="wrap_content"
+                android:layout_height="75dp">
+                <ImageView
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="80"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:layout_gravity="center"
-                    android:textSize="35dp"/>
-            </LinearLayout>
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/img_rumah"/>
+            </RelativeLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="75dp"
+            android:layout_height="65dp"
             android:layout_marginTop="1dp"
             android:orientation="horizontal">
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_weight=".5"
+                android:layout_weight=".25"
                 android:layout_marginRight="0.5dp"
                 android:background="@color/black_transparent"
                 android:id="@+id/ll_ketiga">
@@ -111,48 +78,97 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
-                    android:text="Blok Sensus"
-                    android:layout_marginTop="5dp"
+                    android:text="Kelas"
                     android:textColor="@color/white"
                     android:layout_gravity="center"
-                    android:textSize="10sp"/>
+                    android:textSize="13sp"/>
                 <TextView
                     android:layout_marginTop="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="20 D"
+                    android:text="76"
                     android:id="@+id/tv_ketiga"
                     android:textColor="@color/white"
                     android:layout_gravity="center"
                     android:textSize="28sp"
-                    android:textStyle="bold"
                     android:gravity="center"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
                 android:orientation="vertical"
                 android:layout_height="match_parent"
-                android:layout_weight=".5"
+                android:layout_weight=".25"
                 android:layout_marginRight="0.5dp"
-
                 android:background="@color/black_transparent"
                 android:id="@+id/ll_keempat">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
-                    android:layout_marginTop="5dp"
-                    android:text="Desa/Kelurahan"
+                    android:text="Nama"
                     android:textColor="@color/white"
                     android:layout_gravity="center"
-                    android:textSize="10sp"/>
+                    android:textSize="13sp"/>
                 <TextView
                     android:layout_marginTop="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Karangrau"
-                    android:textStyle="bold"
+                    android:text="76"
                     android:id="@+id/tv_keempat"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:textSize="28sp"
+                    android:gravity="center"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:orientation="vertical"
+                android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:layout_marginRight="0.5dp"
+                android:background="@color/black_transparent"
+                android:id="@+id/ll_kelima">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="Alamat"
+                    android:id="@+id/tv_kelima"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:textSize="13sp"/>
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="76"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:textSize="28sp"
+                    android:gravity="center"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:orientation="vertical"
+                android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:layout_marginRight="0.5dp"
+                android:background="@color/black_transparent"
+                android:id="@+id/ll_keenam">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="Status"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:textSize="13sp"/>
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="76"
+                    android:id="@+id/tv_keenam"
                     android:textColor="@color/white"
                     android:layout_gravity="center"
                     android:textSize="28sp"
