--- a/collect_app/src/main/res/values/colors.xml
+++ b/collect_app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@ the License.
     <color name="primary_transparent">#803968ea</color>
 
     <color name="black_transparent">#80000000</color>
-    <color name="white_transparent">#80FFFFFF</color>
+    <color name="white_transparent">#80FFFFFF</color>\
+    <color name="jarak_transparent">#80ffbf4f</color>
 
 </resources>
